NXP-28950: compute bundle and component deployment order in explorer